// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - whitelist deposit can be called by whitelisted user 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 75975,
}
`;

exports[`EthVault - whitelist set whitelister admin can update whitelister 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 36518,
}
`;

exports[`EthVault - whitelist whitelist can be updated by whitelister 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 53149,
}
`;

exports[`EthVault - whitelist whitelist can be updated by whitelister 2`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 31237,
}
`;

exports[`EthVault - whitelist whitelist root admin can update root 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 55609,
}
`;

exports[`EthVault - whitelist whitelist root user can join with valid proof 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 54725,
}
`;
